RESOLVED FIXED44780
crash in CSSStyleSelector.cpp
https://bugs.webkit.org/show_bug.cgi?id=44780
Summary crash in CSSStyleSelector.cpp
Tony Chang
Reported 2010-08-27 11:11:54 PDT
crash in CSSStyleSelector.cpp
Attachments
Patch (3.27 KB, patch)
2010-08-27 11:13 PDT, Tony Chang
no flags
Patch (6.44 KB, patch)
2010-08-27 11:24 PDT, Simon Fraser (smfr)
tony: review+
Tony Chang
Comment 1 2010-08-27 11:13:00 PDT
Tony Chang
Comment 2 2010-08-27 11:14:02 PDT
Simon, can you review this? It's a crash that seems to have been introduced by http://trac.webkit.org/changeset/66141.
Simon Fraser (smfr)
Comment 3 2010-08-27 11:17:37 PDT
Comment on attachment 65736 [details] Patch CSSPropertyWebkitMaskBoxImage needs a similar check.
Simon Fraser (smfr)
Comment 4 2010-08-27 11:18:11 PDT
Simon Fraser (smfr)
Comment 5 2010-08-27 11:24:42 PDT
Tony Chang
Comment 6 2010-08-27 11:28:08 PDT
Comment on attachment 65740 [details] Patch Thanks!
Simon Fraser (smfr)
Comment 7 2010-08-27 11:31:05 PDT
Note You need to log in before you can comment on or make changes to this bug.