2010-08-27  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Tony Chang.

        Crash in CSSStyleSelector.cpp
        https://bugs.webkit.org/show_bug.cgi?id=44780

        Need to null-check the images when replacing pending images, because a later
        rule may have replaced an image with 'none'.

        Test: fast/css/pending-images-crash.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::loadPendingImages):
        * page/FrameView.cpp:
        (WebCore::FrameView::paintContents): Fix unrelated log message.

Canonical link: https://commits.webkit.org/57012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66240 268f45cc-cd09-0410-ab3c-d52691b4dbfc